# client-sdk-esp32

./: .gitattributes  .gitignore  AGENTS.md  README.md  cspell.yml  examples  licenserc.toml  lychee.toml
.github/: CODEOWNERS‎
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build.yml  build_examples.yml  ci.yml  cspell.yml  docs.yml  esp_registry.yml  host_test.yml  license_check.yml  link_check.yml  pin_check.yml  release.yml
components/codec_board/: CMakeLists.txt  lcd_init.c  led_init.c
components/esp32_s3_touch_amoled_2_06/: esp32_s3_touch_amoled_2_06.c  idf_component.yml
components/esp32_s3_touch_amoled_2_06/include/bsp/: esp32_s3_touch_amoled_2_06.h
components/example_utils/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
components/example_utils/include/: livekit_example_net.h  livekit_example_utils.h
components/example_utils/src/: livekit_example_net.c
components/livekit/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  livekit.c
components/livekit/core/: common.h  data_stream_manager.c  data_stream_manager.h  data_stream_reader.c  data_stream_reader.h  data_stream_writer.c  data_stream_writer.h  engine.c  engine.h  livekit.c  peer.c  peer.h  protocol.c  protocol.h  rpc_client_manager.c  rpc_client_manager.h  rpc_manager.c  rpc_manager.h  rpc_server_manager.c  rpc_server_manager.h  signaling.c  signaling.h  system.c  system.h  url.c  url.h  utils.c  utils.h
components/livekit/examples/custom_hardware/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/livekit/examples/echoear_minimal/: CMakeLists.txt  sdkconfig.defaults
components/livekit/examples/echoear_minimal/main/: CMakeLists.txt  board.c  idf_component.yml  main.c  ui.c  ui.h
components/livekit/examples/echoear_minimal/main/images/: img_logo.c
components/livekit/examples/grocery_assistant/: CMakeLists.txt  README.md  sdkconfig.defaults
components/livekit/examples/grocery_assistant/agent/: .env.example  README.md  pyproject.toml
components/livekit/examples/grocery_assistant/agent/src/: agent.py  database.py
components/livekit/examples/minimal/: README.md  sdkconfig.defaults
components/livekit/examples/minimal_video/: README.md  sdkconfig.defaults
components/livekit/examples/voice_agent/: README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/livekit/host_test/: CMakeLists.txt  README.md  test_extract_attributes.c
components/livekit/host_test/shim/: cJSON.h  cJSON_stubs.c  esp_log.h
components/livekit/include/: livekit.h  livekit_data_stream.h  livekit_rpc.h  livekit_types.h
components/livekit/protocol/: livekit_models.pb.c  livekit_models.pb.h  livekit_rtc.pb.h
components/livekit/protocol/protobufs/: livekit_models.options  livekit_models.proto  livekit_rtc.options
components/livekit/test_app/: CMakeLists.txt  README.md  pytest.toml  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  test_basic.py  test_main.py
components/livekit/test_app/main/: CMakeLists.txt  idf_component.yml  main.c  media.c  media.h  test_rpc.c
components/livekit_sandbox/include/: livekit_sandbox.h
components/livekit_sandbox/src/: livekit_sandbox.c
components/network_connect/: Kconfig.projbuild  README.md  idf_component.yml
components/network_connect/include/: network_connect.h
components/network_connect/src/: network_connect.c
components/sandbox_token/: idf_component.yml
components/sandbox_token/include/: livekit_sandbox.h
components/sandbox_token/src/: livekit_sandbox.c
docs/: Doxyfile  index.md
docs/customization/: custom.css
examples/common/: Kconfig.projbuild  network.c
examples/livekit_demo/: CMakeLists.txt
examples/livekit_demo/agent/: README.md
examples/livekit_demo/main/: board.h  livekit_demo.c
examples/minimal/: sdkconfig.defaults
examples/minimal/main/: board.c  example.c  idf_component.yml  media.c
examples/voice_agent/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.boxs3.working  sdkconfig.defaults  sdkconfig.defaults.echoear  sdkconfig.defaults.esp32s3
examples/voice_agent/agent/: README.md  agent.py  pyproject.toml  requirements.txt
examples/voice_agent/main/: CMakeLists.txt  board.c  board.h  example.c  example.h  idf_component.yml  livekit_demo.c  livekit_demo.h  main.c  media.c  media_setup.c  media_setup.h
examples/voice_agent_lcd/: CMakeLists.txt  README.md  sdkconfig.bsp.esp-box-3
examples/voice_agent_lcd/agent/: agent.py
examples/voice_agent_lcd/agent_js/: realtime_agent.ts
examples/voice_agent_lcd/main/: CMakeLists.txt  audio_render_sink.c  audio_render_sink.h  audio_sink.cpp  audio_sink.h  audio_visualizer.cpp  audio_visualizer.h  board.c  example.c  example.h  fft.c  fft.h  idf_component.yml  main.c  media.c  ui.c  ui.h
examples/voice_agent_lcd/main/fonts/: commit_mono_700_14.c  public_sans_medium_16.c
examples/voice_agent_lcd/main/images/: img_logo.c  img_waveform.c
solutions/livekit_demo/: CMakeLists.txt  README.md
solutions/livekit_demo/agent/: pyproject.toml
solutions/livekit_demo/components/livekit/: CMakeLists.txt
solutions/livekit_demo/components/livekit_core/: CMakeLists.txt
solutions/livekit_demo/components/livekit_core/include/: livekit_peer.h  livekit_signaling.h
solutions/livekit_demo/components/livekit_core/src/: livekit_engine.c  livekit_peer.c  livekit_signaling.c  livekit_url.c
solutions/livekit_demo/components/livekit_engine/: CMakeLists.txt
solutions/livekit_demo/components/livekit_protocol/: README.md
solutions/livekit_demo/components/livekit_signaling/: CMakeLists.txt
solutions/livekit_demo/components/nanopb/: CMakeLists.txt
solutions/livekit_demo/main/: CMakeLists.txt  board.c  board.h  idf_component.yml  livekit.c  livekit.h  livekit_core.c  livekit_core.h  livekit_demo.c  livekit_rtc.c  livekit_rtc.h  livekit_signaling.c  livekit_signaling.h  livekit_types.h  main.c  media_setup.c
solutions/livekit_demo/main/protocol/: livekit_metrics.pb.h  livekit_models.pb.c  livekit_rtc.pb.c  livekit_rtc.pb.h
solutions/livekit_demo/protocol/: README.md  update.py
(+64 files in other folders)
