[project]
name = "esp-demo-agent"
version = "0.1.0"
description = "Demo agent for interacting with LiveKit ESP-32 SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]~=1.0",
    "python-dotenv>=1.1.1"
]
